# smos

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  Dockerfile  LICENSE.txt  README.rst  environment.yml  install.sh  requirements.txt  setup.cfg  setup.py  tatus
.github/workflows/: build.yml  docker.yml
docker/: Dockerfile  build.sh
docs/: Makefile  conf.py  img2ts.rst  index.rst  read_ts.rst  reading.rst  requirements.txt  varnames.rst  write.rst
smos/: grid.py  interface.py  reshuffle.py
smos/smos_ic/: __init__.py  interface.py  reshuffle.py
src/local_scripts/: scene_flags.py  smos_ic_reshuffle.py  smos_qdeg_reshuffle.py  usecase.py
src/smos/: Grid_Point_Mask_USGS.nc  __init__.py  grid.py  interface.py  misc.py  reshuffle.py
src/smos/smos_ic/: __init__.py  download.py  interface.py  interface_ic.py  mask_and_flatten_gridfile.ipynb  reshuffle.py  reshuffle_ic.py
src/smos/smos_l2/: __init__.py  cli.py  download.py  interface_l2.py  reshuffle.py  reshuffle_l2.py
src/smos/smos_l3/: download.py  mask_and_flatten_gridfile.ipynb
src/smos/smos_l4/: L4_test.py  __init__.py  interface.py  interface_l4.py  reshuffle.py  reshuffle_l4.py
tests/: conftest.py  test_ICimg_reading.py  test_ICimg_subset_and_write.py  test_ICreshuffle.py  test_L4img_reading.py  test_L4img_subset_and_write.py  test_L4reshuffle.py  test_grid.py  test_img_reading.py  test_img_subset_and_write.py  test_misc.py  test_reshuffle.py
tests/smos_l2/: test_l2_download.py  test_l2_reshuffle.py  test_reshuffle.py
